[package]
name = "semalock"
version = "0.2.0"
authors = ["Jason Longshore <hello@jasonlongshore.com>"]
description = "A library for concurrently writing to files in a safe and efficient manner."
repository = "https://github.com/longshorej/semalock"
homepage = "https://github.com/longshorej/semalock"
readme = "../README.md"
keywords = ["concurrent", "file", "semaphore", "lock", "mutex"]
license = "Apache-2.0"

[dependencies]
errno = "0.2.3"
libc = "0.2.62"
tempfile = "3.1.0"
